syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.chupilin.javaadvancedcource.module2grpc";

package module2grpc;

message PingRequest {
  string message = 1;
  int64 timestamp = 2;
}

message PongResponse {
  string message = 1;
  int64 timestamp = 2;
}

service PingPongService {
  rpc pingPong(PingRequest) returns (PongResponse);
}
